force-app/main/default/objects/BLN_SLADefinition__c/BLN_SLADefinition__c.object-meta.xml
<CustomObject>
    <description>FOUK-6522 New custom object to log all the Service Level Agreement (SLAs) agreed with clients at contract with associated Account   Legal Entity or Grouping level</description>
    <label>SLA Definition</label>
    <nameField>
        <label>SLA Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLAs Definition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>