force-app/main/default/objects/BLN_SLADefinition__c/fields/BLN_Category__c.field-meta.xml
<CustomField>
    <fullName>BLN_Category__c</fullName>
    <description>FOUK-6522 Category picklist field for SLA Definition</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telephony</fullName>
            </value>
            <value>
                <fullName>Time To Serve</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>ADAS</fullName>
            </value>
            <value>
                <fullName>Job Retention</fullName>
            </value>
            <value>
                <fullName>NPS &amp; Other Survey Questions</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Job processing</fullName>
            </value>
            <value>
                <fullName>Repair Ratio</fullName>
            </value>
            <value>
                <fullName>Mobile Appointments</fullName>
            </value>
            <value>
                <fullName>MI Reporting</fullName>
            </value>
            <value>
                <fullName>Subcontractors</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>