force-app/main/default/objects/BLN_SLADefinition__c/fields/BLN_Description__c.field-meta.xml
<CustomField>
    <fullName>BLN_Description__c</fullName>
    <description>FOUK-6522 Description field for SLA Definition custom object</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>