force-app/main/default/objects/BLN_SLADefinition__c/fields/BLN_MDMSLADefinitionID__c.field-meta.xml
<CustomField>
    <fullName>BLN_MDMSLADefinitionID__c</fullName>
    <description>FOUK-11876</description>
    <label>MDM SLA Definition ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>