force-app/main/default/objects/BLN_SLADefinition__c/fields/BLN_ThresholdDimension__c.field-meta.xml
<CustomField>
    <fullName>BLN_ThresholdDimension__c</fullName>
    <description>FOUK-6522. This field is the reference of Threshold Dimension.</description>
    <label>Threshold Dimension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>Seconds</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>