force-app/main/default/objects/BLN_SLADefinition__c/fields/BLN_ThresholdOperator__c.field-meta.xml
<CustomField>
    <fullName>BLN_ThresholdOperator__c</fullName>
    <label>Threshold Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greater Than (&gt;)</fullName>
            </value>
            <value>
                <fullName>Lesser Than (&lt;)</fullName>
            </value>
            <value>
                <fullName>Equal (=)</fullName>
            </value>
            <value>
                <fullName>Greater Than or Equal (&gt;=)</fullName>
            </value>
            <value>
                <fullName>Lesser Than or Equal (&lt;=)</fullName>
            </value>
            <value>
                <fullName>blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>